--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,51 @@
 %% Drafts
 
+@misc{pump_ccs2014,
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
+          Udit Dhawan and
+          Nikos Vasilakis and
+          Silviu Chiricescu and
+          Jonathan M. Smith and
+          Benjamin C. Pierce and
+          Andr\'{e} DeHon},
+  title = {Programming the {PUMP}: Hardware-Assisted Micro-Policies for Security},
+  howpublished = {Submitted},
+  year = {2014},
+  month = may,
+}
+
+@misc{popl2015,
+  author = {  Arthur Azevedo de Amorim and
+              Maxime D\'en\`es and
+              Nick Giannarakis and
+              C\u{a}t\u{a}lin Hri\c{t}cu and
+              Benjamin C. Pierce and
+              Antal Spector-Zabusky and
+              Andrew Tolmach},
+  title = {Micro-Policies: A Framework for Verified,
+           Hardware-Assisted Security Monitors},
+  howpublished = {Under Review},
+  year = {2014},
+  month = jul,
+  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf},
+}
+
+@misc{pump_asplos2015,
+  author = {Udit Dhawan and
+          C\u{a}t\u{a}lin Hri\c{t}cu and
+          Rafi Rubin and
+          Nikos Vasilakis and
+          Silviu Chiricescu and
+          Jonathan M. Smith and
+          Thomas F. {Knight, Jr.} and
+          Benjamin C. Pierce and
+          Andr\'{e} DeHon},
+  title = {Architectural Support for Software-Defined Metadata Processing},
+  howpublished = {Under Review},
+  year = {2014},
+  month = aug,
+}
+
 %% Journal Papers
 
 @article{Backes:Hritcu:Maffei:14jcs,
