--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -16,6 +16,22 @@
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf},
 }
 
+@misc{jfpsubmission2014,
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
+            Leonidas Lampropoulos and
+            Antal Spector-Zabusky and
+            Arthur Azevedo de Amorim and
+            Maxime D\'{e}n\`{e}s and
+            John Hughes and
+            Benjamin C. Pierce and
+            Dimitrios Vytiniotis},
+  title = {Testing Noninterference, Quickly},
+  url = {http://arxiv.org/abs/1409.0393},
+  howpublished = {arXiv:1409.0393; Submitted to Special Issue of Journal of Functional Programming for ICFP 2013},
+  month = sep,
+  year = {2014},
+}
+
 %% Journal Papers
 
 @article{Backes:Hritcu:Maffei:14jcs,
