--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,7 +1,7 @@
 %% Drafts
 
-@misc{popl2015,
-  author = {  Arthur Azevedo de Amorim and
+@misc{oakland2015submission,
+  author = {  Arthur {Azevedo de Amorim} and
               Maxime D\'en\`es and
               Nick Giannarakis and
               C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -9,10 +9,10 @@
               Antal Spector-Zabusky and
               Andrew Tolmach},
   title = {Micro-Policies: A Framework for Verified,
-           Hardware-Assisted Security Monitors},
+           Tag-Based Security Monitors},
   howpublished = {Under Review},
   year = {2014},
-  month = jul,
+  month = nov,
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf},
 }
 
@@ -99,6 +99,22 @@
 
 
 %% Conference Papers
+
+@misc{DhawnHRVCSKPD15,
+  author = {Udit Dhawan and
+          C\u{a}t\u{a}lin Hri\c{t}cu and
+          Rafi Rubin and
+          Nikos Vasilakis and
+          Silviu Chiricescu and
+          Jonathan M. Smith and
+          Thomas F. {Knight, Jr.} and
+          Benjamin C. Pierce and
+          Andr\'{e} DeHon},
+  title = {Architectural Support for Software-Defined Metadata Processing},
+  howpublished = {To appear in ASPLOS},
+  year = {2015},
+  url = {http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html},
+}
 
 @inproceedings{AmorimCDDHPPPT14,
   title = {A Verified Information-Flow Architecture},
