--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,21 +1,5 @@
 %% Drafts
 
-@misc{oakland2015submission,
-  author = {  Arthur {Azevedo de Amorim} and
-              Maxime D\'en\`es and
-              Nick Giannarakis and
-              C\u{a}t\u{a}lin Hri\c{t}cu and
-              Benjamin C. Pierce and
-              Antal Spector-Zabusky and
-              Andrew Tolmach},
-  title = {Micro-Policies: A Framework for Verified,
-           Tag-Based Security Monitors},
-  howpublished = {Under Review},
-  year = {2014},
-  month = nov,
-  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf},
-}
-
 @misc{jfpsubmission2014,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
             Leonidas Lampropoulos and
@@ -100,6 +84,22 @@
 
 %% Conference Papers
 
+@inproceedings{oakland2015submission,
+  author = {  Arthur {Azevedo de Amorim} and
+              Maxime D\'en\`es and
+              Nick Giannarakis and
+              C\u{a}t\u{a}lin Hri\c{t}cu and
+              Benjamin C. Pierce and
+              Antal Spector-Zabusky and
+              Andrew Tolmach},
+  title = {Micro-Policies: A Framework for Verified, Tag-Based Security Monitors},
+  booktitle = {To appear in Oakland S\&P},
+  year = {2015},
+  month = may,
+  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micropolicies-draft.pdf},
+  acceptance = {55/420=0.13},
+}
+
 @misc{DhawnHRVCSKPD15,
   author = {Udit Dhawan and
           C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -113,6 +113,7 @@
   title = {Architectural Support for Software-Defined Metadata Processing},
   howpublished = {To appear in ASPLOS},
   year = {2015},
+  month = march,
   url = {http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html},
 }
 
