--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -8,7 +8,7 @@
             Antoine Delignat-Lavaud and
             Simon Forest and
             Karthikeyan Bhargavan and
-            Cédric Fournet and
+            C\'{e}dric Fournet and
             Pierre-Yves Strub and
             Markulf Kohlweiss and 
             Jean-Karim Zinzindohoue},
@@ -142,17 +142,26 @@
 
 %% Conference Papers
 
-@misc{itp2015,
-  author = {Zoe Paraskevopoulou and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Maxime D\'{e}n\`{e}s and
-            Leonidas Lampropoulos and
-            Benjamin C. Pierce},
-  title = {Foundational Property-Based Testing},
-  year = {2015},
-  month = mar,
-  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/foundational-pbt.pdf},
-  howpublished = {Accepted at Interactive Theorem Proving (ITP 2015), to appear},
+@inproceedings{Paraskevopoulou15,
+  author    = {Zoe Paraskevopoulou and
+               C\u{a}t\u{a}lin Hri\c{t}cu and
+               Maxime D{\'{e}}n{\`{e}}s and
+               Leonidas Lampropoulos and
+               Benjamin C. Pierce},
+  title     = {Foundational Property-Based Testing},
+  booktitle = {6th International Conference on Interactive Theorem Proving (ITP)},
+  pages     = {325--343},
+  year      = {2015},
+  ee        = {http://dx.doi.org/10.1007/978-3-319-22102-1_22},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/itp/Paraskevopoulou15},
+  url       = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/foundational-pbt.pdf},
+  editor    = {Christian Urban and
+               Xingyuan Zhang},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {9236},
+  publisher = {Springer},
+  isbn      = {978-3-319-22101-4},
+  chcontrib = {secondauthor},
 }
 
 @inproceedings{AmorimDGHPST15,
