--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -26,7 +26,7 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             John Hughes and
             Zoe Paraskevopoulou and
-            Li-yao Xia},
+            {Li-yao} Xia},
   title = {Making Our Own Luck: A Language For Random Generators},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf},
   year = {2015},
@@ -161,6 +161,7 @@
   volume    = {9236},
   publisher = {Springer},
   isbn      = {978-3-319-22101-4},
+  acceptance = {27/54=0.5},
   chcontrib = {secondauthor},
 }
 
