--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -171,18 +171,23 @@
               Nick Giannarakis and
               C\u{a}t\u{a}lin Hri\c{t}cu and
               Benjamin C. Pierce and
-              Antal Spector-Zabusky and
+              Antal {Spector-Zabusky} and
               Andrew Tolmach},
   title = {Micro-Policies: Formally Verified, Tag-Based Security Monitors},
   booktitle = {36th IEEE Symposium on Security and Privacy (Oakland S\&P)},
   year = {2015},
   month = may,
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf},
-  publisher = {IEEE},
+  pages     = {813--830},
+  year      = {2015},
+  ee        = {http://dx.doi.org/10.1109/SP.2015.55},
+  doi       = {10.1109/SP.2015.55},
+  publisher = {{IEEE} Computer Society},
+  isbn      = {978-1-4673-6949-7},
   acceptance = {55/420=0.13},
-  note = {To appear},
   chcontrib = {other},
 }
+
 
 @inproceedings{DhawnHRVCSKPD15,
   author = {Udit Dhawan and
