--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -52,6 +52,27 @@
   chcontrib = {firstauthor}
 }
 
+@inproceedings{jcssubmission2015,
+  title = {A Verified Information-Flow Architecture},
+  author = {
+    Arthur {Azevedo de Amorim} and
+    Nathan Collins and
+    Andr\'e DeHon and
+    Delphine Demange and
+    C\u{a}t\u{a}lin Hri\c{t}cu and
+    David Pichardie and
+    Benjamin C. Pierce and
+    Randy Pollack and
+    Andrew Tolmach
+  },
+  howpublished = {Submitted to special issue of the Journal of
+                  Computer Security on Verified Information Flow Security},
+  year = {2015},
+  month = sep,
+  url = {http://arxiv.org/abs/1509.06503},
+}
+
+
 % Rejected
 @misc{pump_ccs2014,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
