--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -52,7 +52,7 @@
   chcontrib = {firstauthor}
 }
 
-@inproceedings{jcssubmission2015,
+@misc{jcssubmission2015,
   title = {A Verified Information-Flow Architecture},
   author = {
     Arthur {Azevedo de Amorim} and
@@ -182,7 +182,7 @@
   volume    = {9236},
   publisher = {Springer},
   isbn      = {978-3-319-22101-4},
-  acceptance = {27/54=0.5},
+  acceptance = {30/54=0.55},
   chcontrib = {secondauthor},
 }
 
