--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -28,7 +28,7 @@
             Zoe Paraskevopoulou and
             {Li-yao} Xia},
   title = {Making Our Own Luck: A Language For Random Generators},
-  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/luck.pdf},
+  url = {http://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
   year = {2015},
   month = jul,
   howpublished = {Draft, Submitted to POPL},
@@ -96,6 +96,7 @@
             Matteo Maffei},
   title = {Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations},
   journal = {Journal of Computer Security (JCS); Special Issue on Foundational Aspects of Security},
+  shortjournal = {JCS},
   volume = {22},
   number = {2},
   pages = {301--353},
@@ -113,6 +114,7 @@
   author = {Gavin M. Bierman and Andrew D. Gordon and C\u{a}t\u{a}lin Hri\c{t}cu and David Langworthy},
   title = {Semantic Subtyping with an {SMT} Solver},
   journal = {Journal of Functional Programming (JFP)},
+  shortjournal = {JFP},
   publisher = {Cambridge University Press},
   month = mar,
   year = 2012,
@@ -128,6 +130,7 @@
   title = 	 {A Step-indexed Semantics of Imperative Objects},
   author = 	 {C\u{a}t\u{a}lin Hri\c{t}cu and Jan Schwinghammer},
   journal = 	 {Logical Methods in Computer Science (LMCS)},
+  shortjournal = {LMCS},
   year = 	 {2009},
   month = 	 {December},
   volume = 	 {5},
@@ -171,6 +174,7 @@
                Benjamin C. Pierce},
   title     = {Foundational Property-Based Testing},
   booktitle = {6th International Conference on Interactive Theorem Proving (ITP)},
+  shortbooktitle = {ITP},
   pages     = {325--343},
   year      = {2015},
   ee        = {http://dx.doi.org/10.1007/978-3-319-22102-1_22},
@@ -196,6 +200,7 @@
               Andrew Tolmach},
   title = {Micro-Policies: Formally Verified, Tag-Based Security Monitors},
   booktitle = {36th IEEE Symposium on Security and Privacy (Oakland S\&P)},
+  shortbooktitle = {Oakland S\&P},
   year = {2015},
   month = may,
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf},
@@ -221,6 +226,7 @@
           Andr\'{e} DeHon},
   title = {Architectural Support for Software-Defined Metadata Processing},
   booktitle = {20th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)},
+  shortbooktitle = {ASPLOS},
   year = {2015},
   month = mar,
   url = {http://ic.ese.upenn.edu/abstracts/sdmp_asplos2015.html},
@@ -268,6 +274,7 @@
   title = {Testing Noninterference, Quickly},
   booktitle = {18th ACM SIGPLAN International Conference on
                   Functional Programming (ICFP)},
+  shortbooktitle = {ICFP},
   year = {2013},
   publisher = {ACM},
   pages     = {455-468},
@@ -287,6 +294,7 @@ http://www.crash-safe.org/node/24
             Greg Morrisett},
   title = {All Your {IFCException} Are Belong To Us},
   booktitle = {34th IEEE Symposium on Security and Privacy (Oakland S\&P)},
+  shortbooktitle = {Oakland S\&P},
   pages = {3-17},
   publisher = {IEEE Computer Society Press},
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/all-your-ifcexceptions-draft-full.pdf},
@@ -301,7 +309,8 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 @InProceedings{Backes:Busenius:Hritcu:12,
   author = {Michael Backes and Alex Busenius and C\u{a}t\u{a}lin Hri\c{t}cu},
   title = {On the Development and Formalization of an Extensible Code Generator for Real Life Security Protocols},
-  booktitle = {4th NASA Formal Methods Symposium (NFM 2012)},
+  booktitle = {4th NASA Formal Methods Symposium (NFM)},
+  shortbooktitle = {NFM},
   year =  {2012},
   month =  apr,
   publisher = {Springer},
@@ -316,6 +325,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {Michael Backes and C\u{a}t\u{a}lin Hri\c{t}cu and Thorsten Tarrach},
   title = {Automatically Verifying Typing Constraints for a Data Processing Language},
   booktitle = {First International Conference on Certified Programs and Proofs (CPP 2011)},
+  shortbooktitle = {CPP},
   pages =  {296-313},
   year =  {2011},
   month =  dec,
@@ -331,6 +341,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   title = {Union and Intersection Types for Secure Protocol Implementations},
   booktitle = {Theory of Security and Applications
                (TOSCA 2011; part of ETAPS and the precursor of POST)},
+  shortbooktitle = {TOSCA (precursor of POST)},
   note = {Invited paper},
   year = {2011},
   pages = {1-28},
@@ -345,6 +356,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {Gavin M. Bierman and Andrew D. Gordon and C\u{a}t\u{a}lin Hri\c{t}cu and David Langworthy},
   title = {Semantic Subtyping with an {SMT} Solver},
   booktitle = {15th ACM SIGPLAN International Conference on Functional programming (ICFP 2010)},
+  shortbooktitle = {ICFP},
   pages = {105-116},
   year = {2010},
   month = sep,
@@ -359,6 +371,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {Michael Backes and Martin P. Grochulla and C\u{a}t\u{a}lin Hri\c{t}cu and Matteo Maffei},
   title = {Achieving Security Despite Compromise Using Zero-knowledge},
   booktitle = {22th IEEE Symposium on Computer Security Foundations (CSF 2009)},
+  shortbooktitle = {CSF},
   month = jul,
   pages = {308-323},
   year = {2009},
@@ -373,6 +386,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {Michael Backes and C\u{a}t\u{a}lin Hri\c{t}cu and Matteo Maffei},
   title = {Type-checking Zero-knowledge},
   booktitle = {15th ACM Conference on Computer and Communications Security (CCS 2008)},
+  shortbooktitle = {CCS},
   month = oct,
   year = {2008},
   pages = {357-370},
@@ -387,6 +401,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {Michael Backes and C\u{a}t\u{a}lin Hri\c{t}cu and Matteo Maffei},
   title = {Automated Verification of Remote Electronic Voting Protocols in the Applied Pi-calculus},
   booktitle = {21th IEEE Symposium on Computer Security Foundations (CSF 2008)},
+  shortbooktitle = {CSF},
   month = jun,
   year = {2008},
   pages = {195-209},
