--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -27,7 +27,7 @@
             John Hughes and
             Zoe Paraskevopoulou and
             {Li-yao} Xia},
-  title = {Making Our Own Luck: A Language For Random Generators},
+  title = {Making Our Own {Luck}: A Language For Random Generators},
   url = {http://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
   year = {2015},
   month = jul,
