--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -13,7 +13,7 @@
             Markulf Kohlweiss and 
             Jean-Karim Zinzindohoue},
   title = {Dependent Types and Multi-Monadic Effects in {F*}},
-  url = {https://www.fstar-lang.org/papers/mumon/},
+  url = {http://fstar.gforge.inria.fr/papers/mumon/},
   year = {2015},
   month = jul,
   howpublished = {Draft, Submitted to POPL},
