--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,20 @@
 %% Drafts
 
+@misc{yannis-report,
+  author = {Yannis Juglaret and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Arthur {Azevedo de Amorim} and
+            Benjamin C. Pierce and
+            Antal Spector-Zabusky and
+            Andrew Tolmach},
+  title = {Towards a Fully Abstract Compiler Using Micro-Policies:
+           Secure Compilation for Mutually Distrustful Components},
+  howpublished = {Technical Report, arXiv},
+  url = {http://yannis.computer/report.pdf},
+  year = {2015},
+  month = oct,
+}
+
 @misc{fstar-popl2016-submission,
   author = {Nikhil Swamy and
             C\u{a}t\u{a}lin Hri\c{t}cu and
