--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -7,9 +7,10 @@
             Benjamin C. Pierce and
             Antal Spector-Zabusky and
             Andrew Tolmach},
-  title = {Towards a Fully Abstract Compiler Using Micro-Policies:
+  title = {Towards a Fully Abstract Compiler Using {Micro-Policies}:
            Secure Compilation for Mutually Distrustful Components},
-  howpublished = {Technical Report, arXiv},
+  howpublished = {Technical Report, arXiv:1510.00697},
+  url = {http://arxiv.org/abs/1510.00697},
   year = {2015},
   month = oct,
 }
