--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -15,26 +15,6 @@
   month = oct,
 }
 
-@misc{fstar-popl2016-submission,
-  author = {Nikhil Swamy and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Chantal Keller and
-            Aseem Rastogi and
-            Antoine Delignat-Lavaud and
-            Simon Forest and
-            Karthikeyan Bhargavan and
-            C\'{e}dric Fournet and
-            Pierre-Yves Strub and
-            Markulf Kohlweiss and 
-            Jean-Karim Zinzindohoue},
-  title = {Dependent Types and Multi-Monadic Effects in {F*}},
-  url = {http://fstar.gforge.inria.fr/papers/mumon/},
-  year = {2015},
-  month = jul,
-  howpublished = {Draft, Submitted to POPL},
-  chcontrib = {secondauthor},
-}
-
 @misc{luck-popl2016-submission,
   author = {Leonidas Lampropoulos and
             Benjamin C. Pierce and
@@ -46,7 +26,7 @@
   url = {http://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
   year = {2015},
   month = jul,
-  howpublished = {Draft, Submitted to POPL},
+  howpublished = {Draft},
   chcontrib = {minor},
 }
 
@@ -180,6 +160,26 @@
 
 
 %% Conference Papers
+
+@misc{fstar-popl2016,
+  author = {Nikhil Swamy and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Chantal Keller and
+            Aseem Rastogi and
+            Antoine Delignat-Lavaud and
+            Simon Forest and
+            Karthikeyan Bhargavan and
+            C\'{e}dric Fournet and
+            Pierre-Yves Strub and
+            Markulf Kohlweiss and 
+            Jean-Karim Zinzindohoue},
+  title = {Dependent Types and Multi-Monadic Effects in {F*}},
+  url = {http://fstar.gforge.inria.fr/papers/mumon/},
+  year = {2015},
+  month = jul,
+  howpublished = {To appear in POPL 2016},
+  chcontrib = {secondauthor},
+}
 
 @inproceedings{Paraskevopoulou15,
   author    = {Zoe Paraskevopoulou and
