--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -178,6 +178,7 @@
   year = {2015},
   month = jul,
   howpublished = {To appear in POPL 2016},
+  acceptance = {59/253=0.23},
   chcontrib = {secondauthor},
 }
 
