--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -13,6 +13,7 @@
   url = {http://arxiv.org/abs/1510.00697},
   year = {2015},
   month = oct,
+  chcontrib = {secondauthor},
 }
 
 @misc{luck-popl2016-submission,
@@ -44,7 +45,7 @@
   howpublished = {arXiv:1409.0393; Submitted to Special Issue of Journal of Functional Programming for ICFP 2013},
   month = sep,
   year = {2014},
-  chcontrib = {firstauthor}
+  chcontrib = {equalthree}
 }
 
 @misc{jcssubmission2015,
@@ -65,8 +66,8 @@
   year = {2015},
   month = sep,
   url = {http://arxiv.org/abs/1509.06503},
+  chcontrib = {equalall},
 }
-
 
 % Rejected
 @misc{pump_ccs2014,
@@ -161,7 +162,7 @@
 
 %% Conference Papers
 
-@misc{fstar-popl2016,
+@inproceedings{fstar-popl2016,
   author = {Nikhil Swamy and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Chantal Keller and
@@ -226,7 +227,7 @@
   publisher = {{IEEE} Computer Society},
   isbn      = {978-1-4673-6949-7},
   acceptance = {55/420=0.13},
-  chcontrib = {other},
+  chcontrib = {equalall},
 }
 
 
@@ -275,7 +276,7 @@
   isbn      = {978-1-4503-2544-8},
   ee        = {http://doi.acm.org/10.1145/2535838.2535839},
   url = {http://www.crash-safe.org/node/29},
-  chcontrib = {minor},
+  chcontrib = {equalall},
   acceptance = {51/220=0.23},
 }
 
