--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -151,14 +151,13 @@
             Vilhelm Sj\"oberg and
             Brent Yorgey},
   title = {Software Foundations},
-  month = jul,
-  year = {2014},
-  publisher = {Electronic textbook, Version 3.1},
+  month = jan,
+  year = {2015},
+  publisher = {Electronic textbook, Version 3.2},
   url = {http://www.cis.upenn.edu/~bcpierce/sf/},
   key = {Books},
   chcontrib = {minor},
 }
-
 
 %% Conference Papers
 
@@ -173,12 +172,13 @@
             C\'{e}dric Fournet and
             Pierre-Yves Strub and
             Markulf Kohlweiss and 
-            Jean-Karim Zinzindohoue},
+            Jean-Karim Zinzindohoue and
+            Santiago Zanella-B\'eguelin},
   title = {Dependent Types and Multi-Monadic Effects in {F*}},
-  url = {http://fstar.gforge.inria.fr/papers/mumon/},
+  url = {https://www.fstar-lang.org/papers/mumon/},
   year = {2015},
   month = jul,
-  howpublished = {To appear in POPL 2016},
+  note = {To appear in POPL 2016},
   acceptance = {59/253=0.23},
   chcontrib = {secondauthor},
 }
@@ -314,7 +314,7 @@ http://www.crash-safe.org/node/24
   shortbooktitle = {Oakland S\&P},
   pages = {3-17},
   publisher = {IEEE Computer Society Press},
-  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/all-your-ifcexceptions-draft-full.pdf},
+  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/all-your-ifcexception-oakland2013-full.pdf},
   acceptance = {38/315=0.12},
   month = may,
   year = {2013},
@@ -686,6 +686,7 @@ Advisor: Jan Schwinghammer, Programming  Systems  Lab,
   title = {Testing Noninterference, Quickly},
   booktitle = {18th ACM SIGPLAN International Conference on
                   Functional Programming (ICFP)},
+  shortbooktitle = {ICFP},
   year = {2013},
   publisher = {ACM},
   pages     = {455-468},
