--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -200,7 +200,7 @@
             Jean-Karim Zinzindohoue and
             Santiago Zanella-B\'eguelin},
   title = {Dependent Types and Multi-Monadic Effects in {F*}},
-  booktitle = {43nd ACM SIGPLAN-SIGACT
+  booktitle = {43rd ACM SIGPLAN-SIGACT
     Symposium on Principles of Programming Languages (POPL)},
   shortbooktitle = {POPL},
   pages = {256-270},
