--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -31,27 +31,6 @@
   chcontrib = {minor},
 }
 
-@misc{jcssubmission2015,
-  title = {A Verified Information-Flow Architecture},
-  author = {
-    Arthur {Azevedo de Amorim} and
-    Nathan Collins and
-    Andr\'e DeHon and
-    Delphine Demange and
-    C\u{a}t\u{a}lin Hri\c{t}cu and
-    David Pichardie and
-    Benjamin C. Pierce and
-    Randy Pollack and
-    Andrew Tolmach
-  },
-  howpublished = {arXiv:1509.06503; Submitted to special issue of the Journal of
-                  Computer Security (JCS) on Verified Information Flow Security},
-  year = {2015},
-  month = sep,
-  url = {http://arxiv.org/abs/1509.06503},
-  chcontrib = {equalall},
-}
-
 % Tentatively joining this list with Arthur's permission
 @misc{arthur-alpha-draft,
   author = {Arthur {Azevedo de Amorim} and
@@ -93,6 +72,28 @@
 }
 
 %% Journal Papers
+
+@misc{jcssubmission2015,
+  title = {A Verified Information-Flow Architecture},
+  author = {
+    Arthur {Azevedo de Amorim} and
+    Nathan Collins and
+    Andr\'e DeHon and
+    Delphine Demange and
+    C\u{a}t\u{a}lin Hri\c{t}cu and
+    David Pichardie and
+    Benjamin C. Pierce and
+    Randy Pollack and
+    Andrew Tolmach
+  },
+  howpublished = {arXiv:1509.06503; Accepted in Special Issue of the Journal of
+                  Computer Security (JCS) on Verified Information Flow Security.
+                  To appear},
+  year = {2015},
+  month = sep,
+  url = {http://arxiv.org/abs/1509.06503},
+  chcontrib = {equalall},
+}
 
 @misc{jfpsubmission2014,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -159,7 +160,7 @@
   pages = 	 {1--48},
   abstract = {Step-indexed semantic interpretations of types were proposed as an alternative to purely syntactic proofs of type safety using subject reduction. The types are interpreted as sets of values indexed by the number of computation steps for which these values are guaranteed to behave like proper elements of the type. Building on work by Ahmed, Appel and others, we introduce a step-indexed semantics for the imperative object calculus of Abadi and Cardelli. Providing a semantic account of this calculus using more `traditional', domain-theoretic approaches has proved challenging due to the combination of dynamically allocated objects, higher-order store, and an expressive type system. Here we show that, using step-indexing, one can interpret a rich type discipline with object types, subtyping, recursive and bounded quantified types in the presence of state.},
   doi = {10.2168/LMCS-5(4:2)2009},
-  url = {http://lmcs-online.org/ojs/viewarticle.php?id=409%22layout=abstract},
+  url = {http://lmcs-online.org/ojs/viewarticle.php?id=409\%22layout=abstract},
   key = {Journal Papers},
   chcontrib = {equaltwo},
 }
@@ -169,6 +170,7 @@
 
 @book{SF,
   author = {Benjamin C. Pierce and
+            Arthur {Azevedo de Amorim} and
             Chris Casinghino and
             Marco Gaboardi and
             Michael Greenberg and
@@ -177,8 +179,8 @@
             Brent Yorgey},
   title = {Software Foundations},
   month = jan,
-  year = {2015},
-  publisher = {Electronic textbook, Version 3.2},
+  year = {2016},
+  publisher = {Electronic textbook, Version 4.0 beta},
   url = {http://www.cis.upenn.edu/~bcpierce/sf/},
   key = {Books},
   chcontrib = {minor},
@@ -228,8 +230,6 @@
   ee        = {http://dx.doi.org/10.1007/978-3-319-22102-1_22},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/itp/Paraskevopoulou15},
   url       = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/foundational-pbt.pdf},
-  editor    = {Christian Urban and
-               Xingyuan Zhang},
   series    = {Lecture Notes in Computer Science},
   volume    = {9236},
   publisher = {Springer},
