--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,19 @@
 %% Drafts
 
+@misc{beyond-full-abstraction,
+  author = {Yannis Juglaret and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Arthur {Azevedo de Amorim} and
+            Benjamin C. Pierce},
+  title = {Beyond Full Abstraction: Formalizing the Security
+                  Guarantees of Low-Level Compartmentalization},
+  howpublished = {Draft},
+  year = {2016},
+  month = feb,
+  url = {http://arxiv.org/abs/1602.04503},
+  chcontrib = {secondauthor},
+}
+
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
