--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -7,7 +7,7 @@
             Benjamin C. Pierce},
   title = {Beyond Full Abstraction: Formalizing the Security
                   Guarantees of Low-Level Compartmentalization},
-  howpublished = {Draft},
+  howpublished = {Draft, arXiv:1602.04503},
   year = {2016},
   month = feb,
   url = {http://arxiv.org/abs/1602.04503},
