--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -109,7 +109,7 @@
   chcontrib = {equalall},
 }
 
-@misc{jfpsubmission2014,
+@misc{testing_ni_jfp,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
             Leonidas Lampropoulos and
             Antal Spector-Zabusky and
