--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -5,7 +5,7 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Arthur {Azevedo de Amorim} and
             Benjamin C. Pierce},
-  title = {Beyond Full Abstraction: Formalizing the Security
+  title = {Beyond Good and Evil: Formalizing the Security
                   Guarantees of Low-Level Compartmentalization},
   howpublished = {Draft, arXiv:1602.04503},
   year = {2016},
