--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -199,6 +199,7 @@
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Arthur {Azevedo de Amorim} and
+            Boris Eng and
             Benjamin C. Pierce},
   title = {Beyond Good and Evil: Formalizing the Security Guarantees
                   of Compartmentalizing Compilation},
