--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -520,6 +520,20 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Workshop Papers
 
+@misc{AguirreHKS16,
+  title = {From {F*} to {SMT} (Extended Abstract)},
+  author = {Alejandro Aguirre and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Chantal Keller and
+            Nikhil Swamy},
+  howpublished = {Talk at 1st International Workshop on Hammers for
+                  Type Theories (HaTT)},
+  month = jul,
+  year = 2016,
+  url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf},
+  chcontrib = {equalall},
+}
+
 @InProceedings{interlocks_ahns2012,
   author =	 {
   Udit Dhawan and
