--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -24,7 +24,7 @@
             Zoe Paraskevopoulou and
             {Li-yao} Xia},
   title = {Making Our Own {Luck}: A Language For Random Generators},
-  url = {http://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
+  url = {https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
   year = {2015},
   month = jul,
   howpublished = {Unpublished Draft},
